--- a/cash_flow/views/cotizador_menu.xml
+++ b/cash_flow/views/cotizador_menu.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <menuitem id="menu_cotizador_root" name="Cotizador Sicone" sequence="10"/>
-    <menuitem id="menu_cotizador_cotizaciones" name="Cotizaciones" parent="menu_cotizador_root" action="action_cotizador_sicone"/>
 
     <record id="action_cotizador_sicone" model="ir.actions.act_window">
         <field name="name">Cotizaciones</field>
         <field name="res_model">cotizador.sicone</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
-    <record id="view_cotizador_sicone_tree" model="ir.ui.view">
-        <field name="name">cotizador.sicone.tree</field>
+    <menuitem id="menu_cotizador_cotizaciones" name="Cotizaciones" parent="menu_cotizador_root" action="action_cotizador_sicone"/>
+
+    <record id="view_cotizador_sicone_list" model="ir.ui.view">
+        <field name="name">cotizador.sicone.list</field>
         <field name="model">cotizador.sicone</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="cliente"/>
                 <field name="proyecto"/>
                 <field name="total_costo_directo"/>
                 <field name="area_base"/>
                 <field name="fecha_guardado"/>
-            </tree>
+            </list>
         </field>
     </record>
 
