--- a/Modulo_Cotizaciones/views/menus.xml
+++ b/Modulo_Cotizaciones/views/menus.xml
@@ -17,4 +17,15 @@
     </record>
 
     <menuitem id="menu_sicone_proyecto_list" name="Lista de Proyectos" parent="menu_sicone_proyectos" action="action_sicone_proyecto" sequence="1"/>
+        <!-- Acción de Cotizaciones (sale.order) -->
+        <record id="action_sicone_sale_order" model="ir.actions.act_window">
+            <field name="name">Cotizaciones</field>
+            <field name="res_model">sale.order</field>
+            <field name="view_mode">list,form</field>
+            <field name="context">{}</field>
+            <field name="domain">[]</field>
+        </record>
+
+        <!-- Menú Cotizaciones bajo Proyectos -->
+        <menuitem id="menu_sicone_sale_order" name="Cotizaciones" parent="menu_sicone_proyectos" action="action_sicone_sale_order" sequence="2"/>
 </odoo>
